# agentos-render

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml  render.yaml  requirements.txt
.agents/skills/create-agent/: SKILL.md
.agents/skills/create-evals/: SKILL.md
.agents/skills/create-new-agent/: SKILL.md
.agents/skills/deploy-platform/: SKILL.md
.agents/skills/eval-and-improve/: SKILL.md
.agents/skills/extend-agent/: SKILL.md
.agents/skills/improve-agent/: SKILL.md
.agents/skills/review-and-improve/: SKILL.md
.agents/skills/setup-platform/: SKILL.md
agents/: agent_builder.py  platform_manager.py  web_search.py
app/: config.yaml  main.py  registry.py  schedules.py  settings.py
db/: session.py
evals/: __main__.py  cases.py
scripts/: generate_requirements.sh  mcp_check.sh
scripts/railway/: down.sh  redeploy.sh  up.sh
scripts/render/: down.sh  env-sync.sh  redeploy.sh  up.sh
workflows/: deployment_check.py  run_evals.py
